--- a/transactions/build.gradle
+++ b/transactions/build.gradle
@@ -30,11 +30,14 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.mockito:mockito-junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation group: 'com.konghq', name: 'unirest-java', version: '3.14.5'
     implementation group: 'org.json', name: 'json', version: '20240303'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.1.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
+    testImplementation 'org.mockito:mockito-core:5.4.0'
 }
 
 tasks.named('test') {
